--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fernando</title>
+    <title>Lizeth</title>
     <!--#region CSS Propio-->
     <link rel="stylesheet" href="style.css">
     <!-- #endregion -->
